# cliflare

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md
.github/workflows/: ci.yml  crate.yml  publish.yml
docs/: usage.md
src/: cli.rs  client.rs  dns.rs  main.rs  response.rs  settings.rs  token.rs  user_tokens.rs  zone.rs
