# manifest docs ---> https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "cliflare"
version = "0.1.0"
edition = "2021"
authors = ["@davepmiller"]

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1.35.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
