# manifest docs ---> https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "cliflare"
description = "A command line tool used to interact with Cloudflare APIs"
version = "0.3.1"
edition = "2021"
authors = ["@davepmiller"]
readme = "README.md"
homepage = "https://github.com/davepmiller/cliflare"
repository = "https://github.com/davepmiller/cliflare"
license = "MIT"
keywords = ["cli", "cloudflare", "dns", "web"]
categories = ["command-line-interface", "command-line-utilities"]
exclude = [".github"]

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

[dev-dependencies]
mockito = "1.2.0"
